--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,3 +18,6 @@ spring:
       enabled: true
       settings:
         web-allow-others: false
+jwt:
+    secret: 2luhl2hru42l4r2hl4ru2l4rhl24uhrgr4y2i4243
+    lifetime: 3600000
